# PRiMEStereoMatch

./: .gitignore  CMakeLists.txt  DE_APP.cbp  DE_APP.layout  LICENCE.txt  PRiMEStereoMatch.cbp  PRiMEStereoMatch.depend  PRiMEStereoMatch.layout  README.md
DE_APP/: CMakeLists.txt  DE_APP.cbp  DE_APP.depend  DE_APP.layout  Makefile  cbp2make_usage.txt  main.cpp
DE_APP/assets/: boxfilter_8x8.cl  boxfilter_novector.cl  boxfilter_vector16.cl  boxfilter_vector8.cl  cvc_double.cl  cvc_double_novector.cl  cvc_float.cl  cvc_float_novector.cl  cvc_float_vector4.cl  cvc_uchar_novector.cl  cvc_uchar_v16.cl  cvc_v1.cl  cvc_v2.cl  cvf.cl  cvf.cl~  dispsel.cl  dispsel_double.cl  dispsel_float.cl  dispsel_uchar.cl
DE_APP/common/: common.cpp  common.h  image.cpp  image.h
DE_APP/data/: extrinsics.yml  intrinsics.yml  stereo_calib.xml
DE_APP/include/: BoxFilter.h  CVC.h  CVC_cl.h  CVF.h  CVF_cl.h  ComFunc.h  DispEst.h  DispSel.h  DispSel_cl.h  PP.h  StereoCalib.h  StereoMatch.h  common.h
DE_APP/include/CL/: cl.h  cl_d3d10.h  cl_gl.h  cl_gl_ext.h  opencl.h
DE_APP/middlebury-images/: tsukuba.ppm  venus.ppm
DE_APP/src/: BoxFilter.cpp  CVC.cpp  CVC_cl.cpp  CVF.cpp  CVF_cl.cpp  DispEst.cpp  DispSel.cpp  DispSel_cl.cpp  PP.cpp  StereoCalib.cpp  StereoMatch.cpp  StereoMatch.cpp~  common.cpp  main.cpp
DE_APP_v1/: DE_APP.depend  main.cpp
DE_APP_v1/assets/: boxfilter_8x8.cl  boxfilter_vector16.cl  boxfilter_vector8.cl  cvc_float.cl  cvc_v2.cl
DE_APP_v1/assets/dep/: cvc_image.cl  cvf.cl
DE_APP_v1/include/: CVC.h  CVC_cl_image.h  CVF.h  CVF_cl.h  ComFunc.h  DispSel.h  DispSel_cl.h  PP.h  StereoMatch.h
DE_APP_v1/include/CL/: cl_ext.h  cl_platform.h
DE_APP_v1/src/: CVC.cpp  CVC_cl.cpp  CVC_cl_image.cpp  CVC_double.cpp  CVF_cl.cpp  DispEst.cpp  DispSel_cl.cpp  StereoMatch.cpp
assets/: cvc.cl  cvf.cl  dispsel.cl
data/: cpp-example-imagelist_creator_arm  cpp-example-imagelist_creator_x86  extrinsics.yml  intrinsics.yml  tsukuba3_gt.pgm  tsukuba5.ppm
data/Laundry/: dmin.txt
include/: CVC.h  CVC_cl.h  CVF.h  CVF_cl.h  ComFunc.h  DispEst.h  DispSel.h  DispSel_cl.h  JointWMF.h  PP.h  StereoCalib.h  StereoMatch.h  common.h  fastguidedfilter.h  oclUtil.h
src/: CVC.cpp  CVC_cl.cpp  CVF.cpp  CVF_cl.cpp  DispEst.cpp  DispSel.cpp  DispSel_cl.cpp  PP.cpp  StereoCalib.cpp  StereoMatch.cpp  fastguidedfilter.cpp  main.cpp  oclUtil.cpp
